// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`blockquote 1`] = `
"\\\\begin{Quotation}
a quote

a
multiline
quote
\\\\end{Quotation}



\\\\horizontalLine



\\\\begin{Quotation}
a quote
\\\\end{Quotation}



\\\\horizontalLine



\\\\begin{Quotation}
a
multiline
quote
\\\\end{Quotation}"
`;

exports[`blockquote with custom config 1`] = `
"\\\\begin{Quotation}
a quote

a
multiline
quote
\\\\end{Quotation}



\\\\horizontalLine



\\\\begin{Quotation}
a quote
\\\\end{Quotation}



\\\\horizontalLine



\\\\begin{Quotation}
a
multiline
quote
\\\\end{Quotation}"
`;

exports[`code 1`] = `
"\\\\begin{CodeBlock}{python}
print('bla')
\\\\end{CodeBlock}



\\\\begin{CodeBlock}[][1,2]{python}
print('bla')
print('bla')
print('bla')
\\\\end{CodeBlock}



\\\\begin{CodeBlock}{text}
a code without lang
\\\\end{CodeBlock}"
`;

exports[`code+caption 1`] = `
"\\\\begin{codeBlock}[With Source]{python}
print('bla')
\\\\end{codeBlock}



\\\\begin{codeBlock}[With Source][1,2]{python}
print('bla')
print('bla')
print('bla')
\\\\end{codeBlock}"
`;

exports[`custom-blocks 1`] = `
"\\\\begin{Information}
info
\\\\end{Information}


\\\\begin{Warning}
warning
\\\\end{Warning}


\\\\begin{Spoiler}
secret
\\\\end{Spoiler}


\\\\begin{Question}
question \\\\CodeInline{coded}
\\\\end{Question}


\\\\begin{Error}
\\\\textbf{error}
foo bar \\\\\\\\
baz
\\\\end{Error}"
`;

exports[`emoticon 1`] = `"foo  bar"`;

exports[`figure+caption 1`] = `
"\\\\begin{Quotation}[With Source]
a
multiline
quote
\\\\end{Quotation}"
`;

exports[`footnotes 1`] = `
"\\\\levelOneTitle{mytitle A\\\\textsuperscript{\\\\ref{footnote:1}}}


\\\\footnotetext[1]{\\\\label{footnote:1} reference in title}

\\\\levelOneTitle{mytitle B\\\\textsuperscript{\\\\ref{footnote:2}}\\\\footnotetext[2]{\\\\label{footnote:2} footnoterawhead inner}}


\\\\levelOneTitle{myti\\\\textit{tle C\\\\textsuperscript{\\\\ref{footnote:3}}\\\\footnotetext[3]{\\\\label{footnote:3} foo inner}}}


a paragraph\\\\textsuperscript{\\\\ref{footnote:4}}\\\\footnotetext[4]{\\\\label{footnote:4} footnoteRawPar inner}"
`;

exports[`heading 1`] = `
"\\\\levelOneTitle{first level title}


\\\\levelTwoTitle{second level title}


\\\\levelThreeTitle{third level title}


\\\\levelFourTitle{fourth level title}


\\\\levelFiveTitle{fifth level title}


\\\\levelSixTitle{sixth level title}


\\\\levelOneTitle{a \\\\textbackslash{} b}


\\\\levelOneTitle{a \\\\} b}


\\\\levelOneTitle{a \\\\} \\\\textbackslash{} b}


\\\\levelOneTitle{a \\\\} b}"
`;

exports[`heading with custom config 1`] = `
"\\\\levelOneTitle{first level title}


\\\\levelTwoTitle{second level title}


\\\\levelThreeTitle{third level title}


\\\\levelFourTitle{fourth level title}


\\\\levelFiveTitle{fifth level title}


\\\\levelSixTitle{sixth level title}


\\\\levelOneTitle{a \\\\textbackslash{} b}


\\\\levelOneTitle{a \\\\} b}


\\\\levelOneTitle{a \\\\} \\\\textbackslash{} b}


\\\\levelOneTitle{a \\\\} b}"
`;

exports[`html nodes 1`] = `
"\\\\levelOneTitle{foo}


\\\\textbf{something <a> else}"
`;

exports[`inline-code 1`] = `
"a paragraph \\\\CodeInline{with inline code}.



\\\\CodeInline{a
multiline
inlinecode}



\\\\CodeInline{a code with \\\\textbackslash{}}



\\\\CodeInline{a \\\\textbackslash{}text in \\\\textbackslash{}LaTeX \\\\textbackslash{}\\\\textbackslash{}}"
`;

exports[`link 1`] = `
"\\\\externalLink{an external link}{https://wikipedia.com}



\\\\externalLink{an internal link}{http://zestedesavoir.com/forums}



\\\\externalLink{an \\\\CodeInline{external} link}{https://wikipedia.com}"
`;

exports[`link with special characters 1`] = `"\\\\externalLink{foo}{http://example.com?a=b\\\\%c\\\\textasciicircum{}\\\\{\\\\}\\\\#foo}"`;

exports[`link-prepend 1`] = `
"\\\\externalLink{an external link}{https://wikipedia.com}



\\\\externalLink{an internal link}{http://zestedesavoir.com/forums}



\\\\externalLink{an \\\\CodeInline{external} link}{https://wikipedia.com}"
`;

exports[`list 1`] = `
"\\\\begin{itemize}
\\\\item an
\\\\item \\\\textbf{unordered}
\\\\item list
\\\\end{itemize}


\\\\begin{enumerate}
\\\\item an
\\\\item \\\\CodeInline{ordered}
\\\\item list
\\\\end{enumerate}"
`;

exports[`math 1`] = `
"A sentence ($S$) with \\\\textit{italic} and inline math ($C_L$) and $$b$$ another.



\\\\[ L = \\\\frac{1}{2} \\\\rho v^2 S C_L \\\\]



hehe"
`;

exports[`mix-1 1`] = `
"(for convenience,   are replaced with simple single spaces in the tests)



\\\\levelOneTitle{first 1}


foo \\\\\\\\
bar



Disrupt \\\\sout{asymmetrical} unicorn, pok pok kale chips umami selfies gastropub food truck flannel. Blue \\\\textbf{bottle craft} beer hexagon artisan. Chia gochujang crucifix, \\\\textsuperscript{ready} \\\\textsuperscript{made} hammock \\\\textit{blog succulents} sriracha raw denim scenester cray typewriter fashion axe \\\\textsubscript{art} \\\\textit{party}. Schlitz tacos tilde intelligentsia, unicorn fixie adaptogen beard 8-bit street \\\\textsubscript{art} typewriter.



\\\\levelTwoTitle{\\\\textit{second} 1}


\\\\textbf{Literally selfies tbh lo-fi. Actually health goth ennui, brooklyn retro polaroid sriracha. Kogi live-edge mixtape marfa street \\\\textsubscript{art} synth. Godard synth truffaut selfies, vape fanny \\\\sout{pack} subway tile. Stumptown af pabst, try-hard fam ethical actually four dollar toast. Microdosing kogi brooklyn, locavore jianbing etsy sartorial \\\\textit{YOLO}. Williamsburg salvia photo booth \\\\textsuperscript{readymade} listicle man braid.}



\\\\horizontalLine



\\\\begin{Quotation}[Guru]
Marfa pickled helvetica put a bird on it hot chicken williamsburg.
Edison bulb asymmetrical \\\\CodeInline{keffiyeh} schlitz iceland put a bird on it hoodie affogato.

Tofu tote bag distillery viral knausgaard, health goth asymmetrical.
\\\\end{Quotation}



Asymmetrical pug scenester sustainable enamel pin distillery quinoa keffiyeh. Flannel humblebrag PBR\\\\&B polaroid banh mi wolf. Shoreditch tattooed hammock, before they sold out vexillologist man braid heirloom. Activated charcoal craft beer cloud bread meh biodiesel pabst.



\\\\levelThreeTitle{\\\\sout{third} 1}


Art party keytar godard iceland neutra cronut. Austin \\\\textsuperscript{readymade} semiotics, edison bulb cloud bread adaptogen blue bottle jean shorts DIY. Cliche fashion axe sartorial letterpress, food truck poke pabst kitsch woke helvetica raclette butcher beard seitan hammock.



\\\\CodeInline{foo
bar}



\\\\begin{Quotation}
\\\\CodeInline{fo\\\\textbackslash{}o
bar}
\\\\end{Quotation}



Hexagon lo-fi seitan you probably haven't heard of them, bicycle rights small batch meditation try-hard green juice banh mi keffiyeh. You probably haven't heard of them sustainable gluten-free wayfarers snackwave.



\\\\levelThreeTitle{third 2}


\\\\levelFourTitle{\\\\sout{fo}u\\\\textbf{r}t\\\\textit{h} \\\\textit{1}}


Mumblecore kombucha offal, health goth next level before they sold out gluten-free chicharrones keffiyeh. Mumblecore kickstarter hoodie fixie keffiyeh. Microdosing lo-fi taiyaki irony pok pok. Banjo brooklyn umami succulents flexitarian. Swag sartorial scenester synth viral.



\\\\levelFiveTitle{fifth 1}


Banjo bespoke subway tile, street \\\\textsubscript{a\\\\textit{r}}\\\\textsuperscript{t} drinking vinegar offal franzen. Pour-over green juice vaporware kale chips. Meggings cronut affogato PBR\\\\&B, \\\\textsubscript{art} party unicorn dreamcatcher schlitz yuccie mixtape 90's thundercats air plant. Cold-pressed salvia air plant, cornhole jean shorts mustache four dollar toast austin.



\\\\levelThreeTitle{third 3}


Meditation heirloom chicharrones, sartorial man braid hot chicken sustainable. Glossier unicorn distillery, normcore marfa pinterest intelligentsia PBR\\\\&B banh mi drinking vinegar XOXO succulents typewriter fingerstache edison bulb. Meditation ethical cronut glossier cliche kickstarter.



\\\\levelFourTitle{fourth 2}


Venmo bushwick food truck chartreuse fam. Everyday carry gastropub glossier, cold-pressed salvia migas keytar. Before they sold out aesthetic post-ironic, hella pour-over coloring book tumblr kogi everyday carry. Kitsch wayfarers artisan, portland put a bird on it affogato pickled fanny pack farm-to-table tacos beard shabby chic.



\\\\levelFourTitle{fourth 3}


Chambray intelligentsia vape listicle. Pok pok snackwave cronut retro hot chicken, trust fund master cleanse keytar forage dreamcatcher. Taiyaki actually deep v, godard small batch irony lumbersexual unicorn cardigan af. Irony lumbersexual salvia, pitchfork fam snackwave man bun. Kitsch jianbing intelligentsia freegan, waistcoat raw denim cloud bread vice cray etsy listicle skateboard jean shorts.



\\\\levelFiveTitle{fifth 2}


Asymmetrical normcore portland, vaporware viral tote bag DIY slow-carb kogi fanny pack. Keffiyeh ennui church-key, irony VHS man bun edison bulb listicle cloud bread try-hard cred lumbersexual lo-fi glossier.



\\\\levelOneTitle{first 2}


\\\\levelTwoTitle{second 2}


\\\\levelFiveTitle{fifth 3}


Messenger bag locavore swag raclette brunch whatever, portland food truck. PBR\\\\&B cred mlkshk, poke letterpress waistcoat celiac. La croix letterpress forage keffiyeh."
`;

exports[`mix-2 1`] = `
"(for convenience,   are replaced with simple single spaces in the tests)



\\\\levelOneTitle{first 1}


\\\\begin{Quotation}[Quotation Source]
Code inside quote

\\\\begin{codeBlock}[code source]{python}
print('bla')
\\\\end{codeBlock}
\\\\end{Quotation}



\\\\begin{codeBlock}[First \\\\keys{CTRL}+\\\\keys{S}]{python}
print('bla')
\\\\end{codeBlock}



Code: Second



\\\\begin{CodeBlock}{python}
print('code without caption')
\\\\end{CodeBlock}"
`;

exports[`mix-3 1`] = `
"\\\\levelOneTitle{right-aligned list}



\\\\begin{flushright}
\\\\begin{itemize}
\\\\item item
\\\\item item
\\\\end{itemize}

\\\\end{flushright}


\\\\levelOneTitle{centered list}



\\\\begin{center}
\\\\begin{itemize}
\\\\item item
\\\\item item
\\\\item item
\\\\end{itemize}

\\\\end{center}


\\\\levelOneTitle{left list}




\\\\begin{itemize}
\\\\item item
\\\\item item
\\\\item item
\\\\end{itemize}"
`;

exports[`mix-4 1`] = `
"\\\\begin{longtabu}{|p{\\\\linewidth / 3}|p{\\\\linewidth / 3}|p{\\\\linewidth / 3}|} \\\\hline
Sub & Headings & \\\\abbr{ABBR}{abbreviation} \\\\\\\\ \\\\hline
\\\\multirow{2}{*}{cell \\\\par spans \\\\par rows} & \\\\multicolumn{2}{|c|}{column spanning} \\\\\\\\ \\\\cline{2-3}
 & normal & cell \\\\\\\\ \\\\hline
multi \\\\par line \\\\par  \\\\par cells \\\\par too & \\\\multicolumn{2}{|c|}{cells can be \\\\par \\\\textit{formatted} \\\\par \\\\textbf{paragraphs}} \\\\\\\\ \\\\hline

\\\\tableCaption{The new table \\\\abbr{ABBR}{abbreviation} \\\\textsuperscript{\\\\ref{footnote:1}} with \\\\keys{CTRL} + \\\\keys{S}}
\\\\end{longtabu}



\\\\footnotetext[1]{\\\\label{footnote:1} a foot}

\\\\begin{longtabu}{|p{\\\\linewidth / 2}|p{\\\\linewidth / 2}|} \\\\hline
title & image \\\\\\\\ \\\\hline
space & \\\\image{https://i.ytimg.com/vi/lt0WQ8JzLz4/maxresdefault.jpg} \\\\\\\\ \\\\hline
\\\\end{longtabu}



\\\\begin{longtabu}{|p{\\\\linewidth / 2}|p{\\\\linewidth / 2}|} \\\\hline
title & code \\\\\\\\ \\\\hline
inline & \\\\CodeInline{inline} br \\\\par \\\\CodeInline{inline} \\\\\\\\ \\\\hline
block & \\\\ref{appendix-1} \\\\\\\\ \\\\hline
\\\\end{longtabu}



\\\\levelOneTitle{Annexes}


\\\\footnote{\\\\label{appendix-1}}
\\\\begin{CodeBlock}{python}
print('bla')
\\\\end{CodeBlock}"
`;

exports[`mix-5 1`] = `
"\\\\image{http://www.numerama.com/content/uploads/2016/07/espace.jpg}[espace\\\\textsuperscript{\\\\ref{footnote:1}}]



\\\\footnotetext[1]{\\\\label{footnote:1} Two things are infinite: the universe and human stupidity.}"
`;

exports[`mix-6 1`] = `
"\\\\iframe(https://www.youtube.com/embed/8TQIvdFl4aU)[Video][a caption]

\\\\iframe(https://www.youtube.com/embed/8TQIvdFl4aU)[Video][]

no caption"
`;

exports[`paragraph 1`] = `
"\\\\levelOneTitle{first 1}


Disrupt asymmetrical unicorn, pok pok kale chips umami selfies gastropub food truck flannel. Blue bottle craft beer hexagon artisan. Chia gochujang crucifix, readymade hammock blog succulents sriracha raw denim scenester cray typewriter fashion axe art party. Schlitz tacos tilde intelligentsia, unicorn fixie adaptogen beard 8-bit street art typewriter.



\\\\levelTwoTitle{second 1}


Literally selfies tbh lo-fi. Actually health goth ennui, brooklyn retro polaroid sriracha. Kogi live-edge mixtape marfa street art synth. Godard synth truffaut selfies, vape fanny pack subway tile. Stumptown af pabst, try-hard fam ethical actually four dollar toast. Microdosing kogi brooklyn, locavore jianbing etsy sartorial YOLO. Williamsburg salvia photo booth readymade listicle man braid.



Marfa pickled helvetica put a bird on it hot chicken williamsburg. Edison bulb asymmetrical keffiyeh schlitz iceland put a bird on it hoodie affogato. Tofu tote bag distillery viral knausgaard, health goth asymmetrical.



Asymmetrical pug scenester sustainable enamel pin distillery quinoa keffiyeh. Flannel humblebrag PBR\\\\&B polaroid banh mi wolf. Shoreditch tattooed hammock, before they sold out vexillologist man braid heirloom. Activated charcoal craft beer cloud bread meh biodiesel pabst.



\\\\levelThreeTitle{third 1}


Art party keytar godard iceland neutra cronut. Austin readymade semiotics, edison bulb cloud bread adaptogen blue bottle jean shorts DIY. Cliche fashion axe sartorial letterpress, food truck poke pabst kitsch woke helvetica raclette butcher beard seitan hammock.



Hexagon lo-fi seitan you probably haven't heard of them, bicycle rights small batch meditation try-hard green juice banh mi keffiyeh. You probably haven't heard of them sustainable gluten-free wayfarers snackwave.



\\\\levelThreeTitle{third 2}


\\\\levelFourTitle{fourth 1}


Mumblecore kombucha offal, health goth next level before they sold out gluten-free chicharrones keffiyeh. Mumblecore kickstarter hoodie fixie keffiyeh. Microdosing lo-fi taiyaki irony pok pok. Banjo brooklyn umami succulents flexitarian. Swag sartorial scenester synth viral.



\\\\levelFiveTitle{fifth 1}


Banjo bespoke subway tile, street art drinking vinegar offal franzen. Pour-over green juice vaporware kale chips. Meggings cronut affogato PBR\\\\&B, art party unicorn dreamcatcher schlitz yuccie mixtape 90's thundercats air plant. Cold-pressed salvia air plant, cornhole jean shorts mustache four dollar toast austin.



\\\\levelThreeTitle{third 3}


Meditation heirloom chicharrones, sartorial man braid hot chicken sustainable. Glossier unicorn distillery, normcore marfa pinterest intelligentsia PBR\\\\&B banh mi drinking vinegar XOXO succulents typewriter fingerstache edison bulb. Meditation ethical cronut glossier cliche kickstarter.



\\\\levelFourTitle{fourth 2}


Venmo bushwick food truck chartreuse fam. Everyday carry gastropub glossier, cold-pressed salvia migas keytar. Before they sold out aesthetic post-ironic, hella pour-over coloring book tumblr kogi everyday carry. Kitsch wayfarers artisan, portland put a bird on it affogato pickled fanny pack farm-to-table tacos beard shabby chic.



\\\\levelFourTitle{fourth 3}


Chambray intelligentsia vape listicle. Pok pok snackwave cronut retro hot chicken, trust fund master cleanse keytar forage dreamcatcher. Taiyaki actually deep v, godard small batch irony lumbersexual unicorn cardigan af. Irony lumbersexual salvia, pitchfork fam snackwave man bun. Kitsch jianbing intelligentsia freegan, waistcoat raw denim cloud bread vice cray etsy listicle skateboard jean shorts.



\\\\levelFiveTitle{fifth 2}


Asymmetrical normcore portland, vaporware viral tote bag DIY slow-carb kogi fanny pack. Keffiyeh ennui church-key, irony VHS man bun edison bulb listicle cloud bread try-hard cred lumbersexual lo-fi glossier.



\\\\levelOneTitle{first 2}


\\\\levelTwoTitle{second 2}


\\\\levelFiveTitle{fifth 3}


Messenger bag locavore swag raclette brunch whatever, portland food truck. PBR\\\\&B cred mlkshk, poke letterpress waistcoat celiac. La croix letterpress forage keffiyeh."
`;

exports[`regression: code block without language 1`] = `
"\\\\begin{CodeBlock}{text}
a
\\\\end{CodeBlock}"
`;

exports[`table 1`] = `
"\\\\begin{longtabu}{|c|c|} \\\\hline
1 & 2 \\\\\\\\ \\\\hline
1 & 2 \\\\\\\\ \\\\hline
1 & 2 \\\\\\\\ \\\\hline
1 & 2 \\\\\\\\ \\\\hline
\\\\end{longtabu}



\\\\begin{longtabu}{|c|c|c|} \\\\hline
1 & 2 & 3 \\\\\\\\ \\\\hline
1 & 2 \\\\\\\\ \\\\hline
1 & 2  & 3 \\\\\\\\ \\\\hline
1 & 2  & 3 \\\\\\\\ \\\\hline
\\\\end{longtabu}"
`;
